✨ Homepage: Implemented Homepage

--- a/html/projects.html
+++ b/html/projects.html
@@ -4,15 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/globalStyle.css"/>
+    <link rel="stylesheet" href="../css/home.css"/>
     <title>Circle</title>
 </head>
 <body>
+  <div id="menu">
+    <div id="close-button">
+      <span></span>
+      <span></span>
+    </div>
+    <a href="../html/index.html">Home</a>
+    <a href="../html/projects.html">Projects</a>
+    <a href="../html/services.html">Services</a>
+    <a href="../html/services.html">Contact us</a>
+  </div>
   <header id="root">
-    <script src="../js/navbar.js"></script>
+    <nav>
+      <a href="./index.html">
+        <img src="../assets/logos/circle.svg"/>
+      </a>
+      <ul>
+        <li>
+          <a href="../html/index.html" class="selected">Home</a>
+        </li>
+        <li>
+          <a href="../html/projects.html">Projects</a>
+        </li>
+        <li>
+          <a href="../html/services.html">Services</a>
+        </li>
+      </ul>
+      <button>Contact us</button>
+      <div id="menu-button">
+        <span></span>
+        <span></span>
+      </div>
+    </nav>
   </header>
   <main>
-    
+    <section id="first-section">
+
+    </section>
   </main>
+  <script src="../js/home.js"></script>
 </body>
 </html>
