--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,130 @@
   </header>
   <main>
     <section id="first-section">
-
+      <h1>Empowe Your <br> Business With <br> Stunning Design!</h1>
+      <p>Circle is a digital design and development studio.<br> We design and develop astonishing websites <br> and mobile apps.</p>
+      <div>
+        <a>
+          Get in touch
+        </a>
+        <a>
+          See our work
+        </a>
+      </div>
+      <img src="../assets/hero-section/hero-image.png" alt="Hero image of emilio, our web design expert">
+    </section>
+    <section id="second-section">
+      <img src="../assets/logos/airbnb-logo.svg" alt="Airbnb logo"/>
+      <img src="../assets/logos/google-logo.svg" alt="Google logo"/>
+      <img src="../assets/logos/microsoft-logo.svg" alt="Microsoft logo"/>
+      <img src="../assets/logos/fedex-logo.svg" alt="Fedex logo"/>
+      <img src="../assets/logos/amazon-logo.svg" alt="Amazon logo"/>
+    </section>
+    <section id="third-section">
+      <h2>Recent Projects</h2>
+      <div id="cards-container">
+        <div class="card">
+          <img src="../assets/projects-section/1.jpg" alt="Simplify project image">
+          <div class="text-container">
+            <p class="title">Simplify</p>
+            <p class="description">UI Desing & App Development</p>
+            <p class="link">Learn more</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../assets/projects-section/2.jpg" alt="Simplify project image">
+          <div class="text-container">
+            <p class="title">Dashcoin</p>
+            <p class="description">UI Desing & App Development</p>
+            <p class="link">Learn more</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../assets/projects-section/3.jpg" alt="Simplify project image">
+          <div class="text-container">
+            <p class="title">Vectorify</p>
+            <p class="description">UI Desing & App Development</p>
+            <p class="link">Learn more</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="fourth-section">
+      <div id="quote-container">
+        <h3>Hear What Our Clients Have to Say</h3>
+        <q>Circle helped us through every stage of our startup.<br> We really enjoyed working with you.</q>
+        <div id="profile-container">
+          <img src="../assets/testimonials/profile.png" alt="Kristin Watson from booking. Profile image."/>
+          <span>
+            <span>Kristin Watson</span>
+            <span>Booking.com</span>
+          </span>
+        </div>
+        <img class="memoji-one" src="../assets/testimonials/memoji-1.png" alt="Memoji 1"/> 
+        <img class="memoji-two" src="../assets/testimonials/memoji-2.png" alt="Memoji 2"/> 
+        <img class="memoji-three" src="../assets/testimonials/memoji-3.png" alt="Memoji 3"/> 
+        <img class="memoji-four" src="../assets/testimonials/memoji-4.png" alt="Memoji 4"/> 
+        <img class="memoji-four" src="../assets/testimonials/memoji-4.png" alt="Memoji 4"/>
+      </div>
+    </section>
+    <section id="fifth-section">
+      <h2>Our Services</h2>
+      <div id="cards-container">
+        <div class="card">
+          <div class="image-container">
+            <img class="service-img" src="../assets/icon/1.svg" alt="User interface icon">
+          </div>
+          <div class="text-container">
+            <p class="title">User Interface Design</p>
+            <p class="description">Circle provides you with a stunning user interface design that is accessible to everyone.</p>
+            <p class="link">Learn more</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="image-container">
+            <img class="service-img" src="../assets/icon/2.svg" alt="Mouse clicking icon">
+          </div>
+          <div class="text-container">
+            <p class="title">Dashcoin</p>
+            <p class="description">Circle always focuses on delivering the best user experience to your customers. </p>
+            <p class="link">Learn more</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="image-container">
+            <img class="service-img" src="../assets/icon/3.svg" alt="Application developmente icon">
+          </div>
+          <div class="text-container">
+            <p class="title">Vectorify</p>
+            <p class="description">We develop high-quality mobile and web applications using the latest technology stack.</p>
+            <p class="link">Learn more</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="sixth-section">
+      <div id="contact-container">
+        <h2>Do you have any questions?</h2>
+        <p>Let us help you!</p>
+        <form>
+          <input type="email" placeholder="Enter your email"/>
+          <button>Subscribe</button>
+        </form>
+      </div>
+    </section>
+    <section id="seventh-section">
+      <div>
+        <img src="../assets/logos/circle.svg"/>
+        <address>2972 Westheimer Rd. Santa Ana,<br> Illinois 85486 </address>
+      </div>
+      <div>
+        <a>Team</a>
+        <a>Services</a>
+        <a>About Us</a>
+        <a>Press</a>
+        <a>Projects</a>
+        <a>Privacy Policy</a>
+      </div>
     </section>
   </main>
   <script src="../js/home.js"></script>
