⚡ Css components: Now the css is divide by components

--- a/html/index.html
+++ b/html/index.html
@@ -154,8 +154,8 @@
         </form>
       </div>
     </section>
-    <section id="seventh-section">
-      <div>
+    <footer id="seventh-section">
+      <div class="">
         <img src="../assets/logos/circle.svg"/>
         <address>2972 Westheimer Rd. Santa Ana,<br> Illinois 85486 </address>
       </div>
@@ -167,7 +167,7 @@
         <a>Projects</a>
         <a>Privacy Policy</a>
       </div>
-    </section>
+    </footer>
   </main>
   <script src="../js/home.js"></script>
 </body>
