👷 Deploy Netlify: Deploy for testing router performance

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <span></span>
       <span></span>
     </div>
-    <a id="home" href="/home">Home</a>
-    <a id="projects" href="/projects">Projects</a>
-    <a id="services" href="/services">Services</a>
-    <a id="contact" href="/contact">Contact us</a>
+    <a href="/home">Home</a>
+    <a href="/projects">Projects</a>
+    <a href="/services">Services</a>
+    <a href="/contact">Contact us</a>
   </div>
   <header id="root">
     <nav>
@@ -25,9 +25,9 @@
         <img src="../assets/logos/circle.svg"/>
       </a>
       <ul>
-        <li>Home</li>
-        <li>Projects</li>
-        <li>Services</li>
+        <li id="home">Home</li>
+        <li id="projects">Projects</li>
+        <li id="services">Services</li>
       </ul>
       <button>Contact us</button>
       <div id="menu-button">
@@ -37,7 +37,7 @@
     </nav>
   </header>
   <main id="view">
-    <!-- SPA: HERE ALL THE PAGES WILL BE LOADED -->
+    <!-- ROUTER: HERE ALL THE PAGES WILL BE LOADED -->
   </main>
   <script type="module" src="./js/index.js"></script>
 </body>
