🔧 Styles performance: better way to load styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta id="description" name="description" content="Software development and ui design company">
-    <link id="style" rel="stylesheet" href="../css/pages/home.css"/>
+    <link id="style" rel="stylesheet" href=""/>
     <title>Circle: Design and Software development</title>
 </head>
 <body>
@@ -37,6 +37,7 @@
     </nav>
   </header>
   <main id="view">
+    <img src=""
     <!-- ROUTER: HERE ALL THE PAGES WILL BE LOADED -->
   </main>
   <script type="module" src="./js/index.js"></script>
