--- a/pages/home.html
+++ b/pages/home.html
@@ -22,7 +22,7 @@
   <h2>Recent Projects</h2>
   <div id="cards-container">
     <div class="card">
-      <img src="../assets/projects-section/1.jpg" alt="Simplify project image">
+      <img loading="lazy" src="../assets/projects-section/1.jpg" alt="Simplify project image">
       <div class="text-container">
         <p class="title">Simplify</p>
         <p class="description">UI Desing & App Development</p>
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="../assets/projects-section/2.jpg" alt="Simplify project image">
+      <img loading="lazy" src="../assets/projects-section/2.jpg" alt="Simplify project image">
       <div class="text-container">
         <p class="title">Dashcoin</p>
         <p class="description">UI Desing & App Development</p>
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="../assets/projects-section/3.jpg" alt="Simplify project image">
+      <img loading="lazy" src="../assets/projects-section/3.jpg" alt="Simplify project image">
       <div class="text-container">
         <p class="title">Vectorify</p>
         <p class="description">UI Desing & App Development</p>
@@ -52,17 +52,17 @@
     <h3>Hear What Our Clients Have to Say</h3>
     <q>Circle helped us through every stage of our startup.<br> We really enjoyed working with you.</q>
     <div id="profile-container">
-      <img src="../assets/testimonials/profile.png" alt="Kristin Watson from booking. Profile image."/>
+      <img loading="lazy" src="../assets/testimonials/profile.png" alt="Kristin Watson from booking. Profile image."/>
       <span>
         <span>Kristin Watson</span>
         <span>Booking.com</span>
       </span>
     </div>
-    <img class="memoji-one" src="../assets/testimonials/memoji-1.png" alt="Memoji 1"/> 
-    <img class="memoji-two" src="../assets/testimonials/memoji-2.png" alt="Memoji 2"/> 
-    <img class="memoji-three" src="../assets/testimonials/memoji-3.png" alt="Memoji 3"/> 
-    <img class="memoji-four" src="../assets/testimonials/memoji-4.png" alt="Memoji 4"/> 
-    <img class="memoji-four" src="../assets/testimonials/memoji-4.png" alt="Memoji 4"/>
+    <img loading="lazy" class="memoji-one" src="../assets/testimonials/memoji-1.png" alt="Memoji 1"/> 
+    <img loading="lazy" class="memoji-two" src="../assets/testimonials/memoji-2.png" alt="Memoji 2"/> 
+    <img loading="lazy" class="memoji-three" src="../assets/testimonials/memoji-3.png" alt="Memoji 3"/> 
+    <img loading="lazy" class="memoji-four" src="../assets/testimonials/memoji-4.png" alt="Memoji 4"/> 
+    <img loading="lazy" class="memoji-four" src="../assets/testimonials/memoji-4.png" alt="Memoji 4"/>
   </div>
 </section>
 <section id="fifth-section">
@@ -70,7 +70,7 @@
   <div id="cards-container">
     <div class="card">
       <div class="image-container">
-        <img class="service-img" src="../assets/icon/1.svg" alt="User interface icon">
+        <img loading="lazy" class="service-img" src="../assets/icon/1.svg" alt="User interface icon">
       </div>
       <div class="text-container">
         <p class="title">User Interface Design</p>
@@ -80,7 +80,7 @@
     </div>
     <div class="card">
       <div class="image-container">
-        <img class="service-img" src="../assets/icon/2.svg" alt="Mouse clicking icon">
+        <img loading="lazy" class="service-img" src="../assets/icon/2.svg" alt="Mouse clicking icon">
       </div>
       <div class="text-container">
         <p class="title">Dashcoin</p>
@@ -90,7 +90,7 @@
     </div>
     <div class="card">
       <div class="image-container">
-        <img class="service-img" src="../assets/icon/3.svg" alt="Application developmente icon">
+        <img loading="lazy" class="service-img" src="../assets/icon/3.svg" alt="Application developmente icon">
       </div>
       <div class="text-container">
         <p class="title">Vectorify</p>
@@ -112,7 +112,7 @@
 </section>
 <footer id="seventh-section">
   <div class="">
-    <img src="../assets/logos/circle.svg"/>
+    <img loading="lazy" src="../assets/logos/circle.svg"/>
     <address>2972 Westheimer Rd. Santa Ana,<br> Illinois 85486 </address>
   </div>
   <div>
