--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <span></span>
       <span></span>
     </div>
-    <a href="/home">Home</a>
+    <a href="/">Home</a>
     <a href="/projects">Projects</a>
     <a href="/services">Services</a>
     <a href="/contact">Contact us</a>
   </div>
   <header id="root">
     <nav>
-      <a href="./index.html">
+      <a href="/">
         <img src="../assets/logos/circle.svg"/>
       </a>
       <ul>
@@ -29,7 +29,7 @@
         <li id="projects">Projects</li>
         <li id="services">Services</li>
       </ul>
-      <button>Contact us</button>
+      <button id="contact">Contact us</button>
       <div id="menu-button">
         <span></span>
         <span></span>
