⚡Homepage: Now the homepage is fully responsive

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
 <section id="first-section">
-  <h1>Empowe Your <br> Business With <br> Stunning Design!</h1>
+  <h1>Empower Your <br> Business With <br> Stunning Design!</h1>
   <p>Circle is a digital design and development studio.<br> We design and develop astonishing websites <br> and mobile apps.</p>
   <div>
     <button>
