♻️  Router class: Now the routing is managed by Router class

--- a/pages/home.html
+++ b/pages/home.html
@@ -12,11 +12,11 @@
   <img src="../assets/hero-section/hero-image.png" alt="Hero image of emilio, our web design expert">
 </section>
 <section id="second-section">
-  <img src="../assets/logos/airbnb-logo.svg" alt="Airbnb logo"/>
-  <img src="../assets/logos/google-logo.svg" alt="Google logo"/>
-  <img src="../assets/logos/microsoft-logo.svg" alt="Microsoft logo"/>
-  <img src="../assets/logos/fedex-logo.svg" alt="Fedex logo"/>
-  <img src="../assets/logos/amazon-logo.svg" alt="Amazon logo"/>
+  <img loading="eager" src="../assets/logos/airbnb-logo.svg" alt="Airbnb logo"/>
+  <img loading="eager" src="../assets/logos/google-logo.svg" alt="Google logo"/>
+  <img loading="eager" src="../assets/logos/microsoft-logo.svg" alt="Microsoft logo"/>
+  <img loading="eager" src="../assets/logos/fedex-logo.svg" alt="Fedex logo"/>
+  <img loading="eager" src="../assets/logos/amazon-logo.svg" alt="Amazon logo"/>
 </section>
 <section id="third-section">
   <h2>Recent Projects</h2>
