--- a/pages/home.html
+++ b/pages/home.html
@@ -9,14 +9,42 @@
       See our work
     </button>
   </div>
+  <!-- CARDS -->
+  <div id="card-container">
+    <p>Back</p>
+    <p>Choose your card</p>
+    <div id="credit-card">
+      <div>
+       <div id="left-circle">
+       </div>
+       <div id="right-circle">
+       </div>
+      </div>
+      <div id="bottom">
+        <span>•••</span>
+        <span>•••</span>
+        <span>•••</span>
+        <span>2130</span>
+      </div>
+    </div>
+    <span id="dots">
+      <div>
+      </div>
+      <div>
+      </div>     
+      <div>
+      </div>
+    </span>
+  </div>
+  <!-- END OF THE CARD -->
   <img src="../assets/hero-section/hero-image.png" alt="Hero image of emilio, our web design expert">
 </section>
 <section id="second-section">
-  <img loading="eager" src="../assets/logos/airbnb-logo.svg" alt="Airbnb logo"/>
-  <img loading="eager" src="../assets/logos/google-logo.svg" alt="Google logo"/>
-  <img loading="eager" src="../assets/logos/microsoft-logo.svg" alt="Microsoft logo"/>
-  <img loading="eager" src="../assets/logos/fedex-logo.svg" alt="Fedex logo"/>
-  <img loading="eager" src="../assets/logos/amazon-logo.svg" alt="Amazon logo"/>
+  <img src="../assets/logos/airbnb-logo.svg" alt="Airbnb logo"/>
+  <img src="../assets/logos/google-logo.svg" alt="Google logo"/>
+  <img src="../assets/logos/microsoft-logo.svg" alt="Microsoft logo"/>
+  <img src="../assets/logos/fedex-logo.svg" alt="Fedex logo"/>
+  <img src="../assets/logos/amazon-logo.svg" alt="Amazon logo"/>
 </section>
 <section id="third-section">
   <h2>Recent Projects</h2>
