✨ Multiples contexts: Now you can create any instances of class Context you want to

--- a/pages/home.html
+++ b/pages/home.html
@@ -49,30 +49,7 @@
 <section id="third-section">
   <h2>Recent Projects</h2>
   <div id="cards-container">
-    <div class="card">
-      <img loading="lazy" src="../assets/projects-section/1.jpg" alt="Simplify project image">
-      <div class="text-container">
-        <p class="title">Simplify</p>
-        <p class="description">UI Desing & App Development</p>
-        <p class="link">Learn more</p>
-      </div>
-    </div>
-    <div class="card">
-      <img loading="lazy" src="../assets/projects-section/2.jpg" alt="Simplify project image">
-      <div class="text-container">
-        <p class="title">Dashcoin</p>
-        <p class="description">UI Desing & App Development</p>
-        <p class="link">Learn more</p>
-      </div>
-    </div>
-    <div class="card">
-      <img loading="lazy" src="../assets/projects-section/3.jpg" alt="Simplify project image">
-      <div class="text-container">
-        <p class="title">Vectorify</p>
-        <p class="description">UI Desing & App Development</p>
-        <p class="link">Learn more</p>
-      </div>
-    </div>
+    <!-- HERE GOES THE PROJECTS CARDS -->
   </div>
 </section>
 <section id="fourth-section">
