✨ _project Page: Now is accessible the project page on card click

--- a/pages/_project.html
+++ b/pages/_project.html
@@ -1,1 +1,41 @@
-<h1>Concret project</h1>
+<section id="blog-header">
+    <h1>Fetching data</h1>
+    <div id="subtitle">
+        <h3>Topic</h3>
+        <p>Completed on: <span>January 01, 2000</span></p>
+    </div>  
+</section>
+<section id="blog-content">
+    <div></div>
+    <p>..........................</p>
+</section>
+<section id="cards-section">
+    <h2>Other Projects</h2>
+    <div id="cards-container">
+      <!-- HERE GOES THE PROJECTS CARDS -->
+    </div>
+</section>
+<section id="contact-section">
+    <div id="contact-container">
+        <h2>Do you have any questions?</h2>
+        <p>Let us help you!</p>
+        <form>
+            <input type="email" placeholder="Enter your email"/>
+            <button>Subscribe</button>
+        </form>
+    </div>
+</section>
+<footer id="seventh-section">
+    <div class="">
+        <img loading="lazy" src="../assets/logos/circle.svg"/>
+        <address>2972 Westheimer Rd. Santa Ana,<br> Illinois 85486 </address>
+    </div>
+    <div>
+        <a>Team</a>
+        <a>Services</a>
+        <a>About Us</a>
+        <a>Press</a>
+        <a>Projects</a>
+        <a>Privacy Policy</a>
+    </div>
+</footer>
