--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta id="description" name="description" content="Software development and ui design company">
-    <link id="style" rel="stylesheet" href="./css/pages/home.css"/>
+    <base href="/">
+    <link id="style" rel="stylesheet" href="/css/pages/home.css"/>
     <title>Circle: Design and Software development</title>
 </head>
 <body>
