⚡ _project-page: Now the project loads and other projects cards are also loaded

--- a/pages/_project.html
+++ b/pages/_project.html
@@ -2,12 +2,12 @@
     <h1>Fetching data</h1>
     <div id="subtitle">
         <h3>Topic</h3>
-        <p>Completed on: <span>January 01, 2000</span></p>
+        <p>Completed on: <span id="date">January 01, 2000</span></p>
     </div>  
 </section>
 <section id="blog-content">
-    <div></div>
-    <p>..........................</p>
+    <img id="banner" src="" alt=""/> <!--No alt it's decorative img--> 
+    <p id="content">..........................</p>
 </section>
 <section id="cards-section">
     <h2>Other Projects</h2>
