♻️  Navigation and Project page: now these two works as expected

--- a/pages/home.html
+++ b/pages/home.html
@@ -88,7 +88,7 @@
             <img loading="lazy" class="service-img" src="../assets/icon/2.svg" alt="Mouse clicking icon">
         </div>
         <div class="text-container">
-            <p class="title">LOREMP LOREMP</p>
+            <p class="title">User Experience Design</p>
             <p class="description">Circle always focuses on delivering the best user experience to your customers. </p>
             <p class="link">Learn more</p>
         </div>
@@ -98,7 +98,7 @@
             <img loading="lazy" class="service-img" src="../assets/icon/3.svg" alt="Application developmente icon">
         </div>
         <div class="text-container">
-            <p class="title">LOREMP LOREMP</p>
+            <p class="title">Application Development</p>
             <p class="description">We develop high-quality mobile and web applications using the latest technology stack.</p>
             <p class="link">Learn more</p>
         </div>
