--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,1 +1,10 @@
-<h1>projects</h1>
+<section id="projects-container">
+    <h2>Our Projects</h2>
+    <div id="cards-container">
+        <!-- HERE GOES THE PROJECTS CARDS -->
+        <!-- FOR NOW LOADS EXAMPLE EMPTY CARDS -->
+        <div class="empty-card"></div>
+        <div class="empty-card"></div>
+        <div class="empty-card"></div>
+    </div>
+</section>
