✨Contact page: Now it´s available contact page ui

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,1 +1,24 @@
-<h1>Contact us</h1>
+<section id="form-section">
+    <h1>Contact us</h1>
+    <form>
+        <fieldset id="fullname">
+            <p>Full Name</p>
+            <input type="text" placeholder="Enter your full name"/>
+        </fieldset>
+        <fieldset id="row-fields">
+            <fieldset>
+                <p>Email</p>
+                <input type="email" placeholder="Enter your email address"/>
+            </fieldset>
+            <fieldset>
+                <p>Phone</p>
+                <input type="tel" placeholder="Enter your phone number"/>
+            </fieldset>
+        </fieldset>
+        <fieldset id="message">
+            <p>Message</p>
+            <textarea type="text" placeholder="Write your message here..."></textarea>
+        </fieldset>
+        <button>Submit</button>
+    </form>
+</section>
