--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,6 +19,6 @@
             <p>Message</p>
             <textarea type="text" placeholder="Write your message here..."></textarea>
         </fieldset>
-        <button>Submit</button>
+        <button id="submit-button">Submit</button>
     </form>
 </section>
