✨ Form validation: now the regex detects your silly inputs

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,23 +1,26 @@
 <section id="form-section">
+    <div>
+
+    </div>
     <h1>Contact us</h1>
     <form>
         <fieldset id="fullname">
             <p>Full Name</p>
-            <input type="text" placeholder="Enter your full name"/>
+            <input id="name-input" type="text" placeholder="Enter your full name"/>
         </fieldset>
         <fieldset id="row-fields">
             <fieldset>
                 <p>Email</p>
-                <input type="email" placeholder="Enter your email address"/>
+                <input id="email-input" type="email" placeholder="Enter your email address"/>
             </fieldset>
             <fieldset>
-                <p>Phone</p>
-                <input type="tel" placeholder="Enter your phone number"/>
+                <p>Phone</p> 
+                <input id="tel-input" type="tel" placeholder="Enter your phone number"/>
             </fieldset>
         </fieldset>
         <fieldset id="message">
             <p>Message</p>
-            <textarea type="text" placeholder="Write your message here..."></textarea>
+            <textarea id="message-input"type="text" placeholder="Write your message here..."></textarea>
         </fieldset>
         <button id="submit-button">Submit</button>
     </form>
