--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta id="description" name="description" content="Software development and ui design company">
     <base href="/">
+    <!-- PRELOADS -->
+    <link rel="preload" href="/css/pages/_project.css" as="style" />
+    <link rel="preload" href="/css/pages/contact.css" as="style" />
+    <!-- NORMAL FLOW -->
     <link rel="stylesheet" href="/css/style.css"/>
     <link id="style" rel="stylesheet" href="/css/pages/home.css"/>
     <title>Circle: Design and Software development</title>
