--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <a href="/">Home</a>
     <a href="/projects">Projects</a>
-    <a href="/services">Services</a>
+    <a href="/">Services</a>
     <a href="/contact">Contact us</a>
   </div>
   <header id="root">
