⚡Second card: now is visible the second card on hero section

--- a/pages/home.html
+++ b/pages/home.html
@@ -37,7 +37,9 @@
     </span>
   </div>
   <!-- END OF THE CARD -->
-  <img src="../assets/hero-section/hero-image.png" alt="Hero image of emilio, our web design expert">
+  <img id="card-2" src="../assets/hero-section/card-2.png" alt=""/>
+  <!-- CARD 2 -->
+  <img id="hero" src="../assets/hero-section/hero-image.png" alt="Hero image of emilio, our web design expert">
 </section>
 <section id="second-section">
   <img src="../assets/logos/airbnb-logo.svg" alt="Airbnb logo"/>
